# payroll

./: .cursorrules  .gitignore  DEVELOPMENT_PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  alembic.ini  env.example  git_setup.ps1  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.ps1  start_simple.ps1
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: auth.py  employees.py  payroll.py  reports.py  time_tracking.py  users.py
app/core/: __init__.py  cache.py  config.py  database.py  logging.py  middleware.py  security.py
app/models/: __init__.py  employee.py  enums.py  payroll.py  time_entry.py  user.py
app/schemas/: __init__.py  employee.py  payroll.py  reports.py  time_entry.py  user.py
app/services/: __init__.py  employee.py  notification_service.py  payroll_service.py  reporting_service.py  time_tracking_service.py  user_service.py
app/utils/: __init__.py
docs/: api.md  database.md  deployment.md  security.md  troubleshooting.md
tests/: __init__.py  conftest.py
tests/test_integration/: test_auth_endpoints.py
tests/test_unit/: test_payroll_service.py  test_security.py
